--- a/src/index.css
+++ b/src/index.css
@@ -41,9 +41,10 @@ button {
   font-family: inherit;
   background-color: #1a1a1a;
   cursor: pointer;
-  transition: border-color 0.25s;
+  transition: all 0.25s;
 }
 button:hover {
+  background-color: #292929;
   border-color: #646cff;
 }
 button:focus,
